@@ -62,13 +62,6 @@ EndCharacters   abcdefghijklmnopqrstuvwxyz0123456789
 IndexReport 2
 
 
-# Put yes to ignore the total number of words in the file
-# when calculating ranking. Often better with merges and
-# small files. Default is no.
-
-IgnoreTotalWordCountWhenRanking yes
-
-
 # Set the stopwords (words to ignore when searching and when indexing)
 # Carefully think about this feature before using a list of stopwords
 # You can list the words here:
@@ -82,13 +75,7 @@ IgnoreWords file: stopwords/my_stopwords.txt
 # Another option is to use the IgnoreLimit directive, and
 # swish will determine what stopwords to use.  But please
 # read the documentation before using the IgnoreLimit directive.
-
-
-# Since comments are not shown when viewing a document, we decide
-# not to index the text of the comments.  The default is to index
-# html comments.
-
-IndexComments 0
+# It can be slow, and may not work with other options.
 
 
 # Since we are using such a restrictive WordCharacters settings, we
